--- a/src/sass/utilities/_variables.scss
+++ b/src/sass/utilities/_variables.scss
@@ -1,8 +1,10 @@
 /* Colors */
-$url: "../../images/icons/notification.svg";
+$dark-high-value: #111;
+$dark-middle-value: #222;
+$dark-low-value: #333;
 
-$color-dark: #333;
 $color-light: #f5f5f2;
+$whiteness: #fff;
 
 $grey-high-value: #979797;
 $grey-middle-value: #bababa;
