--- a/src/sass/utilities/_loops.scss
+++ b/src/sass/utilities/_loops.scss
@@ -2,6 +2,6 @@
   h#{$i} {
     font-family: $main-font;
     font-weight: $font-medium;
-    color: $color-dark;
+    color: $dark-low-value;
   }
 }
