--- a/src/sass/utilities/_mixins.scss
+++ b/src/sass/utilities/_mixins.scss
@@ -7,3 +7,33 @@
     }
   }
 }
+
+@mixin notification-icon($color) {
+  content: "";
+  position: absolute;
+  width: 1rem;
+  height: 1rem;
+  background-color: $color;
+  border-radius: 50%;
+  top: 0;
+  right: 0;
+  z-index: 999999;
+}
+
+@mixin mobile {
+  @media (max-width: 767px) and (min-height: 415px) {
+    @content;
+  }
+}
+
+@mixin mobile-landscape {
+  @media (min-width: 568px) and (max-height: 414px) and (max-width: 767) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media (min-height: 415px) and (min-width: 768px) and (max-width: 1024px) {
+    @content;
+  }
+}
