Add basic layout

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -64,3 +64,9 @@ svg {
     @include notification-icon($green-high-saturation);
   }
 }
+
+body::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
