--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,3 +8,5 @@
 @import "./utilities/loops";
 @import "./layout/grid";
 @import "./layout/menu";
+@import "./layout/aside";
+@import "./layout/articles";
