--- a/src/sass/layout/_articles.scss
+++ b/src/sass/layout/_articles.scss
@@ -2,6 +2,13 @@
   margin-top: 9rem;
   transition: all 0.5s ease-in-out;
   margin-left: 16.6%;
+
+  @include tablet {
+    margin-left: 33.3%;
+  }
+  @include mobile-landscape {
+    margin-left: 33.3%;
+  }
 }
 
 .articles--margin {
