--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -33,6 +33,7 @@
     justify-content: flex-end;
     align-items: center;
     background-color: $whiteness;
+    border-bottom: 1px solid $grey-low-value;
   }
 
   &--item,
