--- a/src/sass/layout/_articles.scss
+++ b/src/sass/layout/_articles.scss
@@ -2,6 +2,9 @@
   margin-top: 10rem;
   transition: all 0.5s ease-in-out;
   margin-left: 16.6%;
+  @include mobile {
+    margin-left: 0;
+  }
 
   @include tablet {
     margin-left: 33.3%;
@@ -17,7 +20,23 @@
 
 .page__article {
   margin: 2rem;
-  height: 700px;
+
   background-color: #fff;
   box-shadow: 0.3rem 0.3rem 1rem $grey-middle-value;
+
+  .article__section {
+    border-bottom: 1px solid $grey-low-value;
+    padding: 1.5rem 0;
+
+    .article--center {
+      justify-content: center;
+      align-items: center;
+      flex-wrap: nowrap;
+      overflow: hidden;
+    }
+  }
+}
+
+.article__section:last-child {
+  border: none;
 }
