--- a/src/sass/layout/_aside.scss
+++ b/src/sass/layout/_aside.scss
@@ -6,6 +6,14 @@
   width: 100%;
   height: 100%;
   transition: all 0.5s ease-in-out;
+  @include mobile {
+    left: -100%;
+  }
+
+  @include mobile-landscape {
+    overflow: auto;
+    height: 250%;
+  }
 
   &--list {
     padding-top: 1rem;
@@ -16,7 +24,8 @@
       padding: 1rem 2rem;
       transition: all 0.3s;
 
-      &:hover {
+      &:hover,
+      &.active {
         background-color: $dark-low-value;
         border-left: 0.5rem solid $orange-dark;
       }
@@ -26,9 +35,13 @@
 
 .aside--left {
   left: -100%;
+  @include mobile {
+    left: 0;
+  }
 }
 
 .aside__chat {
+  margin-top: 2rem;
   border-top: 1px solid $grey-high-value;
   padding: 2rem;
 
