--- a/src/sass/layout/_aside.scss
+++ b/src/sass/layout/_aside.scss
@@ -7,16 +7,16 @@
   height: 100%;
   transition: all 0.5s ease-in-out;
   @include mobile {
+    margin-top: 5rem;
     left: -100%;
   }
 
-  @include mobile-landscape {
-    overflow: auto;
-    height: 250%;
-  }
-
   &--list {
+    overflow-y: auto;
     padding-top: 1rem;
+    @include mobile {
+      padding: 0;
+    }
     color: $grey-middle-value;
 
     li {
@@ -45,6 +45,11 @@
   border-top: 1px solid $grey-high-value;
   padding: 2rem;
 
+  @include mobile {
+    margin-top: 0;
+    padding: 1rem 2rem;
+  }
+
   &--title {
     text-transform: uppercase;
     color: $grey-high-value;
@@ -71,5 +76,52 @@
 .aside__item {
   &--icon {
     margin-right: 2rem;
+  }
+}
+
+.aside__topmenu {
+  @include mobile {
+    display: flex;
+  }
+  display: none;
+  border-top: 1px solid $grey-high-value;
+
+  &--row {
+    width: 100%;
+    justify-content: center;
+    margin: 1rem;
+  }
+
+  &--item {
+    padding: 1rem 0;
+    width: 100%;
+    border-radius: 0.3rem;
+    justify-content: space-evenly;
+    align-items: center;
+    transition: all 0.3s;
+    &:hover {
+      background-color: $grey-low-value;
+    }
+  }
+
+  &--icon {
+    border-radius: 0.3rem;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.3s;
+
+    .item--icon {
+      width: 3rem;
+      height: 3rem;
+    }
+
+    svg {
+      width: 3rem;
+      height: 3rem;
+    }
+
+    &:hover {
+      background-color: $grey-low-value;
+    }
   }
 }
