--- a/src/sass/layout/_aside.scss
+++ b/src/sass/layout/_aside.scss
@@ -23,6 +23,7 @@
       justify-content: flex-start;
       padding: 1rem 2rem;
       transition: all 0.3s;
+      cursor: pointer;
 
       &:hover,
       &.active {
